--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,13 @@
   </head>
   <body>
     {{ content }}
+    
+    <footer>
+	    		<ul>
+	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+				</ul>
+		</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
